@@ -9,6 +9,10 @@
 #                                                                                          #
 ############################################################################################
 
+[28] --> [ICC] Changes:
+                - Dark nucleus lose aggro without a reason.
+                - Svalna & Crok: add spell Divine Surge, try to fix position problem, misc...
+	           by Thainification.
 [27] --> Fix player on transports.
 [26] --> Fix Pick Lock.
 [25] --> Fix pet not returning on target death by other player.
